Update AssembledToolBakedModel.java